# schulmanager-discord-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/schulmanager_discord_bot/: __init__.py  __main__.py  api_client.py  bot.py  config.py  embeds.py  models.py  storage.py
tests/: test_discord_embeds.py
